@@ -1,3 +1,10 @@
+2008-07-27  Callum McKenzie  <callum@spooky-possum.org>
+
+	* applet.h:		
+	* applet.c: Patch from Bastien Nocera to use gstreamer signals to
+	avoid the need to poll the state (to update the icon) on devices
+	which support it. See bug #478485.
+
 2008-07-06  Changwoo Ryu  <cwryu@debian.org>
 
 	* docs/ko/ko.po: Updated Korean translation.
